--- a/ContainerProject/.classpath
+++ b/ContainerProject/.classpath
@@ -29,7 +29,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="src/main/resources/jcommon-1.0.23.jar"/>
 	<classpathentry kind="lib" path="src/main/resources/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
